syntax = "proto3";

package host;

import "cline/common.proto";

option go_package = "github.com/cline/grpc-go/host";
option java_multiple_files = true;
option java_package = "bot.cline.host.proto";

// Provides secure credential retrieval from the OS keychain.
// Called by McpHub before spawning stdio MCP server processes
// so that credentials never need to be stored on the filesystem.
service CredentialService {
  // Returns credentials for a specific MCP server from the OS keychain.
  // The server_name is passed as StringRequest.value.
  // Returns empty env map if no credentials are found for the server.
  rpc getServerCredentials(cline.StringRequest) returns (ServerCredentials);

  // Stores credentials for a specific MCP server into the OS keychain.
  // Called by Tauri backend so that the same Go binary (cline-host) handles
  // both reads and writes, avoiding cross-process keychain ACL issues.
  rpc storeServerCredentials(ServerCredentials) returns (cline.EmptyRequest);

  // Deletes all credentials for a specific MCP server from the OS keychain.
  // The server_name is passed as StringRequest.value.
  rpc deleteServerCredentials(cline.StringRequest) returns (cline.EmptyRequest);
}

// Credentials for an MCP server, retrieved from the OS keychain.
message ServerCredentials {
  // The MCP server name (e.g., "gmail", "slack", "notion")
  string server_name = 1;
  // Environment variable key-value pairs to inject into the server process.
  // Keys are env var names (e.g., "EMAIL_ADDRESS", "EMAIL_PASSWORD").
  // Values are the plaintext credential values from the OS keychain.
  map<string, string> env = 2;
}
